<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>c1_rrbot_joint_trajectory_controller</name>
  <version>0.1.0</version>
  <description>
    A [ros2_control_demos](https://github.com/ros-controls/ros2_control_demos) used to demonstrate the [ros2_controllers](https://github.com/ros-controls/ros2_controllers) joint_trajectory_controller
  </description>
  <maintainer email="martinho@accelerationrobotics.com">Martiño Crespo Álvarez</maintainer>
  <license>Apache License 2.0</license>
  <author email="martinho@accelerationrobotics.com">Martiño Crespo Álvarez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
