<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>d8_single_arm_static_avoidance_perception</name>
  <version>0.1.0</version>
  <description>
    Benchmark involving a single robotic arm with holding a static position and implementing a perception-based collision avoidance approach.
  </description>
  <maintainer email="victor@accelerationrobotics.com">Víctor Mayoral-Vilches</maintainer>
  <license>Apache License 2.0</license>
  <author email="victor@accelerationrobotics.com">Víctor Mayoral-Vilches</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
