<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m4_collision_checking_bullet</name>
  <version>0.1.0</version>
  <description>
    A meta computational graph that uses [moveit2](https://github.com/ros-planning/moveit2)
  to compute collision checking with the [Bullet](https://github.com/bulletphysics/bullet3) library between a UFACTORY
   xArm6 manipulator and a cube-shaped collision object. Used to demonstrate a complex tranformation using the [geometry2](https://github.com/ros2/geometry2) package.
  </description>
  <maintainer email="alex@accelerationrobotics.com">Alejandra Martínez Fariña</maintainer>
  <license>Apache License 2.0</license>
  <author email="alex@accelerationrobotics.com">Alejandra Martínez Fariña</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
