<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>a1_perception_2nodes</name>
  <version>0.1.0</version>
  <description>
    A simple perception rectify ROS robotics operation. 
    Used to demonstrate a simple perception component 
    image_pipeline package.
  </description>
  <maintainer email="victor@accelerationrobotics.com">Víctor Mayoral Vilches</maintainer>
  <license>Apache License 2.0</license>
  <author email="victor@accelerationrobotics.com">Víctor Mayoral Vilches</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>a1_perception_2nodes</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
