<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>a4_depth_image_proc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jasonjabbour@g.harvard.edu">jason</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>a1_perception_2nodes</depend>

  <!-- Might not need all of these packages  -->
  <depend>rclcpp</depend>
  <depend>tracetools</depend>
  <depend>tracetools_benchmark</depend>
  <depend>tracetools_analysis</depend>
  <depend>tracetools_launch</depend>
  <depend>tracetools_trace</depend>
  <depend>rclcpp_components</depend>
  <depend>image_transport</depend>
  <depend>image_pipeline</depend>
  <depend>cyclonedds</depend>
  <depend>rmw_cyclonedds_cpp</depend>
  <depend>lttng-tools</depend>
  <depend>liblttng-ust-dev</depend>
  <depend>babeltrace</depend>
  <depend>stereo_image_proc</depend>
  

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_vitis</buildtool_depend> -->
  <!-- <buildtool_depend>ament_cuda</buildtool_depend>   -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
