<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>a6_rectify_throughput</name>
  <version>0.1.0</version>
  <description>
      A simple perception rectify ROS robotics operation. Used to demonstrate a simple perception component [image_pipeline](https://github.com/ros-perception/image_pipeline) package.
  </description>
  <maintainer email="alex@accelerationrobotics.com">Alejandra Martínez Fariña</maintainer>
  <license>Apache License 2.0</license>
  <author email="alex@accelerationrobotics.com">Alejandra Martínez Fariña</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_vitis</buildtool_depend> -->
  <!-- <buildtool_depend>ament_cuda</buildtool_depend>   -->

  <depend>rclcpp</depend>
  <depend>tracetools</depend>
  <depend>tracetools_benchmark</depend>
  <depend>tracetools_analysis</depend>
  <depend>tracetools_launch</depend>
  <depend>tracetools_trace</depend>
  <depend>rclcpp_components</depend>
  <depend>image_transport</depend>
  <depend>image_pipeline</depend>
  <depend>cyclonedds</depend>
  <depend>rmw_cyclonedds_cpp</depend>
  <depend>lttng-tools</depend>
  <depend>liblttng-ust-dev</depend>
  <depend>babeltrace</depend>
  <depend>a1_perception_2nodes</depend>
  <!-- <depend>python3-bt2</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
