<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>a8_stereo_image_proc_pc</name>
  <version>0.0.0</version>
  <description>RobotPerf package that evaluates the performance of the stereo_image_proc::PointCloudNode node.</description>
  <maintainer email="yushun_hsiao@g.harvard.edu">Yu-Shun Hsiao</maintainer>
  <maintainer email="jasonjabbour@g.harvard.edu">Jason Jabbour</maintainer>
  <author email="yushun_hsiao@g.harvard.edu">Yu-Shun Hsiao</author>
  <author email="jasonjabbour@g.harvard.edu">Jason Jabbour</author>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>a1_perception_2nodes</depend>
  <depend>a3_stereo_image_proc</depend>

  <!-- Might not need all of these packages  -->
  <depend>rclcpp</depend>
  <depend>tracetools</depend>
  <depend>tracetools_benchmark</depend>
  <depend>tracetools_analysis</depend>
  <depend>tracetools_launch</depend>
  <depend>tracetools_trace</depend>
  <depend>rclcpp_components</depend>
  <depend>image_transport</depend>
  <depend>image_pipeline</depend>
  <depend>cyclonedds</depend>
  <depend>rmw_cyclonedds_cpp</depend>
  <depend>lttng-tools</depend>
  <depend>liblttng-ust-dev</depend>
  <depend>babeltrace</depend>
  <depend>stereo_image_proc</depend> 
  <depend>ros2_benchmark</depend>
  <depend>benchmark_utilities</depend>
  <depend>ros2benchmark</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_vitis</buildtool_depend> -->
  <!-- <buildtool_depend>ament_cuda</buildtool_depend>   -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
